v0.2.21 (01/17/2024) :
    - Added support for 8KB, 16KB, 32KB and 48KB ROMs  
     
v0.2.20 (01/08/2024) :
    - Added support for constant address in array of pointers
     
v0.2.19 (12/22/2023) :
    - Moved to cc6502 v1.0.14

v0.2.18 (12/04/2023) :
    - Moved to cc6502 v1.0.13
    - Added support for correct state save on interrupt
    - Added error on zeropage variables overflow

v0.2.17 (11/08/2023) :
    - Moved to cc6502 v1.0.12
    - Enhanced function level computation (too slow when recursion is found)
    - Corrected zeropage variable usage count

v0.2.16 (10/26/2023) :
    - Moved to cc6502 v1.0.10

v0.2.15 (10/09/2023) :
    - Moved to cc6502 v1.0.9

v0.2.14 (10/02/2023) :
    - Bug corrected: current_bank is set correctly (bankswitching)
    - Added generation of asm in banked rom
    - Added interrupt tree call local variables declaration 
    - Added memory full message

v0.2.13 (09/17/2023) :
    - Better supergame detection (no need to have function code in banks)

v0.2.12 (09/04/2023) :
    - Added small and big sprites in multisprite.h
    - Added example_small_sprites and example_explosions
    - Moved to cc6502 v1.0.3

v0.2.11 (08/28/2023) :
    - Corrected some bugs in conio.h
    - Added holeydmacost.c example
    - Added DMA Masking vertical scrolling support

v0.2.10 (07/17/2023) :
    - Added information on zeropage memory usage
    - Better local variables memory mapping in order to avoid copies and stacking (for cc6502 v0.9.1)

v0.2.9 (07/02/2023) :
    - Moved to cc6502 v0.9

v0.2.8 (06/27/2023) :
    - Moved Pokey location to 0x4000 to make it work on real hardware

v0.2.7 (06/19/2023) :
    - Added sfx and RMTracker (Pokey music) examples

v0.2.6 (06/12/2023) :
    - Added MS_BIDIR_VERTICAL_SCROLLING and MS_HORIZONTAL_SCROLLING support
    - Added examples/exmaples_tiles.c
    - Added headers/joystick.h for joystick support
    
v0.2.5 (06/04/2023) :
    - Added memcpy function in string.h